--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.6",
+    "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
